--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1, p, input {
+        @apply font-terminal;
+        @apply font-light;
+        @apply text-[#fef3f5];
+    }
+}
